samples/_failures_safe/1761724830_7f6c62_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_00d22a71.c: In function ‘display_statistics’:
./samples/SAFE/__tmp_00d22a71.c:156:12: error: missing terminating " character
  156 |     printf("INFO entries
      |            ^~~~~~~~~~~~~
./samples/SAFE/__tmp_00d22a71.c:156:5: error: expected expression at end of input
  156 |     printf("INFO entries
      |     ^~~~~~
./samples/SAFE/__tmp_00d22a71.c:156:5: error: expected declaration or statement at end of input
